src/objects/Glxy_ProjectRequestASA__c.object
<CustomObject>
    <fields>
        <fullName>OldASA__c</fullName>
        <inlineHelpText>Current ASA number for specific space for an agency.</inlineHelpText>
        <label>Old ASA</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldBaseStructuredParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldBaseSurfaceParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldSquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Square Feet</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Antennas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Antennas</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Land__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Land</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectAgencyID__c</fullName>
        <label>Project Agency</label>
        <referenceTo>Glxy_ProjectAgency__c</referenceTo>
        <relationshipName>Project_Agency_ASA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequestASAID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier from Rexus. This helps in finding the record in Rexus.</inlineHelpText>
        <label>RequestASAID</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Project Request ASA</label>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Request ASA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>